Istio/VirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins-vs
  namespace: jenkins
spec:
  hosts:
  - "jenkins.darknet.net"
  gateways:
  - istio-ingress/kube-gateway
  http:
  - route:
    - destination:
        host: jenkins-service  # Nombre del servicio.
        port:
          number: 8080 # Puerto del servicio.

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysqldb-vs
  namespace: mysqldb
spec:
  hosts:
  - "mysql.darknet.net"
  gateways:
  - istio-ingress/kube-gateway
  tcp:
  - match:
    - port: 3306
    route:
    - destination:
        host: mysql-service  # Nombre del servicio.
        port:
          number: 3306 # Puerto del servicio.
